@@ -4,7 +4,7 @@
 
 =head1 NAME
 
-Date::Holidays::GB - Determine British holidays - Current UK public and bank holiday dates up to 2018
+Date::Holidays::GB - Determine British holidays - Current UK public and bank holiday dates up to 2019
 
 =head1 SYNOPSIS
 
